--- a/Project_mini/myBlog/post/templates/base.html
+++ b/Project_mini/myBlog/post/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>HW16 - Mohammad Hadiomid</title>
+    <title>Mini Project - Mohammad Hadiomid</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
     <!-- Google Fonts Roboto -->
@@ -36,6 +36,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
       <div class="container-fluid">
         <!-- Navbar brand -->
+        <a class="navbar-brand" href="{% url 'login_url' %}"> Login
+          <img src="#" height="16" alt="" loading="lazy"
+            style="margin-top: -3px;" />
+        </a>
+        <a class="navbar-brand" href="{% url 'logout_url' %}"> Logout</a>
         <a class="navbar-brand" href="#"> Mohammad's blog
           <img src="#" height="16" alt="" loading="lazy"
             style="margin-top: -3px;" />
