--- a/Project_mini/myBlog/post/templates/base.html
+++ b/Project_mini/myBlog/post/templates/base.html
@@ -60,6 +60,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'post-list' %}">Post</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'tag-list' %}">tag</a>
+            </li>
           </ul>
 
           <ul class="navbar-nav d-flex flex-row">
