--- a/Project_mini/myBlog/post/templates/post/tag_list.html
+++ b/Project_mini/myBlog/post/templates/post/tag_list.html
@@ -6,6 +6,18 @@
   <h4 class="mb-2 h2">tags</h4>
 </div>
 
+<div class="container mt-3 text-center" style="padding:30px">
+  <form action="{% url 'add_tag_url' %}" method="post">
+          <div class="input-group">
+            {% csrf_token %}
+            {{ form_tag.title }}
+            <!-- <input type="text" class="form-control text-center" placeholder="Add your new category here" name="category_box"> -->
+            <button class="btn btn-primary" type="submit">Add</button>
+            <!-- <button class="btn btn-danger" type="button">X</button> -->
+          </div>
+  </form>
+</div>
+
 <main class="my-5">
   <div class="container">
     <!--Section: Content-->
@@ -30,9 +42,11 @@
                 </div>
               </div>
             </div>
-          {% empty %}
-            There is no tag.
-          {% endfor %}
+            {% empty %}
+              <p></p>
+              <p class="my-5 pb-5">There is no tag.</p>
+              <p class="my-3"></p>
+            {% endfor %}
 
         </div>
     </section>
