--- a/Project_mini/myBlog/post/templates/post/category_list.html
+++ b/Project_mini/myBlog/post/templates/post/category_list.html
@@ -37,7 +37,7 @@
                     <h5 class="card-title">{{ category.title }}</h5>
                       
                       <a href="" class="btn btn-warning" style="width: 47%;">Edit</a>
-                      <a href="" class="btn btn-danger px-0" style="width: 47%;">Delete</a>
+                      <a href="{% url 'delete_category_url' id=category.id %}" class="btn btn-danger px-0" style="width: 47%;">Delete</a>
                       <hr>
                       <br>
 
