--- a/Project_mini/myBlog/post/templates/post/tag_list.html
+++ b/Project_mini/myBlog/post/templates/post/tag_list.html
@@ -35,7 +35,8 @@
                 <div class="card-body">
                   <h5 class="card-title">{{ tag.title }}</h5>
 
-                    <a href="{% url 'delete_tag_url' id=tag.id %}" class="btn btn-danger px-0" style="width: 47%;">Delete</a>
+                    <a href="{% url 'edit_tag_url' id=tag.id %}" class="btn btn-warning m-1 " style="width: 60%;">Edit</a>
+                    <a href="{% url 'delete_tag_url' id=tag.id %}" class="btn btn-danger px-0" style="width: 60%;">Delete</a>
                     <hr>
                     <br>
                   
