--- a/Project_mini/myBlog/post/templates/forms/edit_post.html
+++ b/Project_mini/myBlog/post/templates/forms/edit_post.html
@@ -3,15 +3,15 @@
 {% block content %}
 
 <div id="intro" class="p-4 text-center bg-light">
-    <h4 class="mb-2 h2">Edit Tag</h4>
+    <h4 class="mb-2 h2">Edit Post</h4>
 </div>
 
 <div class="container my-5 text-center">
     <div class="col-md-12 my-3">
-        <form action="{% url 'edit_tag_url' id=tag.id %}?next={{request.GET.next}}" method="post">
+        <form action="{% url 'edit_post_url' id=post.id %}?next={{request.GET.next}}" method="post">
             {% csrf_token %}
             {{form.as_p}}
-            <p>rename ({{tag.title}}) ?</p>
+            <p>rename ({{post.title}}) ?</p>
             <input class="btn btn-danger" type="submit" value="edit">
         </form>
     </div>
