--- a/Project_mini/myBlog/post/templates/post/post_detail.html
+++ b/Project_mini/myBlog/post/templates/post/post_detail.html
@@ -14,7 +14,7 @@
             <div class="col-lg-12 col-md-12 mb-4">
               <div class="card">
                 <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                  <img src="https://mdbootstrap.com/img/new/standard/nature/00{{ post.id }}.jpg" class="img-fluid" />
+                  <img src="{{ post.image.url }}" class="img-fluid" />
                   <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                   </a>
