--- a/Project_mini/myBlog/post/templates/post/search.html
+++ b/Project_mini/myBlog/post/templates/post/search.html
@@ -17,7 +17,11 @@
             <div class="col-lg-3 col-md-12 mb-4">
               <div class="card">
                 <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                  <img src="https://mdbootstrap.com/img/new/standard/nature/00{{ post.id }}.jpg" class="img-fluid" />
+                  {% if post.image %}
+                    <img src="{{ post.image.url }}" class="img-fluid" />
+                  {% else %}
+                    <img src="https://mdbootstrap.com/img/new/standard/nature/00{{ post.id }}.jpg" class="img-fluid" />
+                  {% endif %}
                   <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                   </a>
