--- a/Project_mini/myBlog/post/templates/forms/edit_post.html
+++ b/Project_mini/myBlog/post/templates/forms/edit_post.html
@@ -11,7 +11,7 @@
         <form action="{% url 'edit_post_url' id=post.id %}?next={{request.GET.next}}" method="post">
             {% csrf_token %}
             {{form.as_p}}
-            <p>rename ({{post.title}}) ?</p>
+            <p>edit ({{post.title}}) ?</p>
             <input class="btn btn-danger" type="submit" value="edit">
         </form>
     </div>
