Add comment and requirement

--- a/Project_mini/myBlog/post/templates/post/post_detail.html
+++ b/Project_mini/myBlog/post/templates/post/post_detail.html
@@ -51,6 +51,7 @@
                         There is no comment.
                     {% endfor %}
                     </ul>
+                    <P>If you want to leave a comment, just</P><a href="{% url 'login_url' %}">Login</a>
                     
                   </p>
 
