--- a/Project_mini/myBlog/post/templates/post/post_list.html
+++ b/Project_mini/myBlog/post/templates/post/post_list.html
@@ -39,7 +39,7 @@
 
                     
                   </p>
-                  <a href="{% url 'post_detail' slug=post.slug %}" class="btn btn-primary">Read</a>
+                  <a href="{% url 'add_comment_url' slug=post.slug %}" class="btn btn-primary">Read</a>
                 </div>
               </div>
             </div>
