--- a/Project_mini/myBlog/post/templates/post/user_posts.html
+++ b/Project_mini/myBlog/post/templates/post/user_posts.html
@@ -42,7 +42,7 @@
                             <hr>
                             <br>
 
-                            <a href="{% url 'post_detail' slug=post.slug %}" class="btn btn-primary">Read</a>
+                            <a href="{% url 'add_comment_url' slug=post.slug %}" class="btn btn-primary">Read</a>
                         </div>
                     </div>
                 </div>
