--- a/Project_mini/myBlog/post/templates/forms/login.html
+++ b/Project_mini/myBlog/post/templates/forms/login.html
@@ -14,8 +14,8 @@
             <!-- <input type="hidden" value="next"> -->
             <input type="submit" value="Login">
         </form>
-        <div class="my-5">
-            <p>not registered yet? <a href='{% url "register_url" %}'> REGISTER NOW</a></p>
+        <div class="my-5 pb-1">
+            <p class="pb-5">not registered yet? <a href='{% url "register_url" %}'> REGISTER NOW</a></p>
         </div>
     </div>
 </div>
