--- a/Project_mini/myBlog/post/templates/post/post_detail.html
+++ b/Project_mini/myBlog/post/templates/post/post_detail.html
@@ -51,7 +51,8 @@
                         There is no comment.
                     {% endfor %}
                     </ul>
-                    <P>If you want to leave a comment, just</P><a href="{% url 'login_url' %}">Login</a>
+                    <hr>
+                    <P>If you want to leave a comment, just <a href="{% url 'login_url' %}"> Login</a></P>
                     
                   </p>
 
