--- a/Project_mini/myBlog/post/templates/forms/delete_post.html
+++ b/Project_mini/myBlog/post/templates/forms/delete_post.html
@@ -8,7 +8,7 @@
 
 <div class="container my-5 text-center">
     <div class="col-md-12 my-3">
-        <form action="{% url 'delete_post_url' id=post.id %}" method="post">
+        <form action="{% url 'delete_post_url' slug=post.slug %}" method="post">
             {% csrf_token %}
             {{form.as_p}}
             <h4>Are You sure you want to delete this Post?</h4>
