--- a/Project_mini/myBlog/post/templates/post/category_posts.html
+++ b/Project_mini/myBlog/post/templates/post/category_posts.html
@@ -37,7 +37,11 @@
 
                                 
                             </p>
-                            <a href="{% url 'add_comment_url' slug=post.slug %}" class="btn btn-primary">Read</a>
+                            {% if user %}
+                                <a href="{% url 'add_comment_url' slug=post.slug %}" class="btn btn-primary">Read</a>
+                            {% else %}
+                                <a href="{% url 'post_detail' slug=post.slug %}" class="btn btn-primary">Read</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
