--- a/Project_mini/myBlog/post/templates/forms/delete_post.html
+++ b/Project_mini/myBlog/post/templates/forms/delete_post.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
+{% block header %}
+    Delete Post
+{% endblock header %}
+
 {% block content %}
 
-<div id="intro" class="p-4 text-center bg-light">
-    <h4 class="mb-2 h2">Delete Post</h4>
-</div>
 
 <div class="container my-5 text-center">
     <div class="col-md-12 my-3">
