--- a/Project_mini/myBlog/post/templates/post/search.html
+++ b/Project_mini/myBlog/post/templates/post/search.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 
+{% block header %}
+  Search results
+{% endblock header %}
 
 {% block content %}
-
-<div id="intro" class="p-4 text-center bg-light">
-    <h4 class="mb-2 h2">Search Result</h4>
-</div>
 
 
 <main class="my-5">
