--- a/Project_mini/myBlog/post/templates/forms/change_password.html
+++ b/Project_mini/myBlog/post/templates/forms/change_password.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
+{% block header %}
+    Change Password
+{% endblock header %}
+
 {% block content %}
 
-<div id="intro" class="p-4 text-center bg-light">
-    <h4 class="mb-2 h2">Change password</h4>
-</div>
 
 <div class="container my-5">
     <div class="col-md-12 my-3">
