--- a/Project_mini/myBlog/post/templates/forms/login.html
+++ b/Project_mini/myBlog/post/templates/forms/login.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
+
+{% block header %}
+    Login
+{% endblock header %}
+
 {% block content %}
 
-<div id="intro" class="p-4 text-center bg-light">
-    <h4 class="mb-2 h2">Login</h4>
-</div>
 
 <div class="container text-center my-5">
     <div class="col-md-12 my-3">
