--- a/Project_mini/myBlog/post/templates/post/category_posts.html
+++ b/Project_mini/myBlog/post/templates/post/category_posts.html
@@ -1,10 +1,12 @@
 {%extends  "base.html"%}
 
+{% block header %}
+    Posts of {{ category_posts.title }} category
+{% endblock header %}
+
+
 {% block content %}
 
-<div id="intro" class="p-4 text-center bg-light">
-  <h4 class="mb-2 h2">Posts of {{ category_posts.title }} category</h4>
-</div>
 
 <main class="my-5">
   <div class="container">
