--- a/Project_mini/myBlog/post/templates/post/index.html
+++ b/Project_mini/myBlog/post/templates/post/index.html
@@ -1,16 +1,12 @@
 {%extends  "base.html"%}
 
+{% block header %}
+  <h1 class="mb-3 h2">Mohammad Hadiomid's BLOG</h1>
+  <p class="mb-1">welcome to my personal blog</p>
+{% endblock header %}
+
 {% block content %}
 
-    <!-- Jumbotron -->
-    <div id="intro" class="p-5 text-center bg-light">
-      <h1 class="mb-3 h2">Mohammad Hadiomid's BLOG</h1>
-      <p class="mb-3">welcome to my personal blog</p>
-
-    </div>
-    <!-- Jumbotron -->
-
-  <!--Main Navigation-->
 
   <!--Main layout-->
   <main class="my-5">
