--- a/Project_mini/myBlog/post/templates/post/post_detail.html
+++ b/Project_mini/myBlog/post/templates/post/post_detail.html
@@ -1,10 +1,12 @@
 {%extends  "base.html"%}
 
+{% block header %}
+  Posts Details
+{% endblock header %}
+
+
 {% block content %}
 
-<div id="intro" class="p-4 text-center bg-light">
-  <h4 class="mb-2 h2">Post Details</h4>
-</div>
 
 <main class="my-5">
   <div class="container">
