--- a/Project_mini/myBlog/post/templates/post/tag_list.html
+++ b/Project_mini/myBlog/post/templates/post/tag_list.html
@@ -1,10 +1,11 @@
 {%extends  "base.html"%}
 
+{% block header %}
+  Tags
+{% endblock header %}
+
 {% block content %}
 
-<div id="intro" class="p-4 text-center bg-light">
-  <h4 class="mb-2 h2">tags</h4>
-</div>
 
 <div class="container mt-3 text-center" style="padding:30px">
   <form action="{% url 'add_tag_url' %}" method="post">
