--- a/Project_mini/myBlog/post/templates/post/user_posts.html
+++ b/Project_mini/myBlog/post/templates/post/user_posts.html
@@ -1,10 +1,12 @@
 {%extends  "base.html"%}
 
+{% block header %}
+    <strong>{{ user }}</strong> Dashboard
+{% endblock header %}
+
+
 {% block content %}
 
-<div id="intro" class="p-4 text-center bg-light">
-  <h4 class="mb-2 h2"><strong>{{ user }}</strong> Dashboard</h4>
-</div>
 
 <main class="my-5">
   <div class="container">
@@ -50,7 +52,7 @@
                 <p></p>
                 <p>welcome {{user}}, You have written no post.</p>
                 <a href="{% url 'add_post_url' %}">+ create new post</a>
-                <p class="my-5 pt-4 pb-5"></p>
+                <p class="my-5 pt-4"></p>
 
             {% endfor %}
 
