fix some bugs in template

--- a/Project_mini/myBlog/post/templates/base.html
+++ b/Project_mini/myBlog/post/templates/base.html
@@ -38,7 +38,8 @@
       <div class="container-fluid">
         <!-- Navbar brand -->
         {% if request.user.id %}
-          <a class="navbar-brand" href="{% url 'user_posts_url' %}"> {{ request.user.username }} </a>
+          <a class="navbar-brand" href="{% url 'user_posts_url' %}"> <strong class="text-uppercase">{{ request.user.username }}</strong> </a>
+          <a class="navbar-brand" href="{% url 'change_password_url' %}"> password </a>
           <a class="navbar-brand" href="{% url 'logout_url' %}"> Logout </a>
         {% else %} 
           <a class="navbar-brand" href="{% url 'login_url' %}"> Login </a>
