--- a/Project_mini/myBlog/post/templates/forms/add_post.html
+++ b/Project_mini/myBlog/post/templates/forms/add_post.html
@@ -11,7 +11,17 @@
     <div class="col-md-12 my-3">
         <form enctype="multipart/form-data"  method="post" action='{% url "add_post_url" %}'>
             {% csrf_token %}
-            {{form_post.as_p }}
+            {% for field in form_post %}
+                <label for="title" class="col-form-label">{{ field.label_tag }}</label>
+                <div class="fieldWrapper mb-4">
+                    <!-- {{ field.errors }} -->
+                    {{ field }}
+                    {% if field.help_text %}
+                        <p class="help">{{ field.help_text|safe }}</p>
+                    {% endif %}
+                </div>
+            {% endfor %}
+
             <input type="submit" value="Add">
         </form>
     </div>
