--- a/Project_mini/myBlog/post/templates/post/user_posts.html
+++ b/Project_mini/myBlog/post/templates/post/user_posts.html
@@ -1,7 +1,7 @@
 {%extends  "base.html"%}
 
 {% block header %}
-    <strong>{{ user }}</strong> Dashboard
+    <strong class="text-uppercase">{{ user }}</strong> Dashboard
 {% endblock header %}
 
 
