--- a/Project_mini/myBlog/post/templates/forms/add_comment.html
+++ b/Project_mini/myBlog/post/templates/forms/add_comment.html
@@ -38,7 +38,7 @@
                       <h4>{{ post.descrption }}</h4><br>
                       <hr>
                       <p class="my-0 text-lg-end">Edited: {{ post.updated_at }}
-                      <a href="" class="btn btn-secondary"> like:{{ post.like }}</a></p>
+                      <a href="{% url 'add_comment_url' slug=post.slug %}" class="btn btn-secondary"> like:{{ post.like }}</a></p>
                       <hr>Tags:
                       {% for tag in tags %}
                         {{ tag.title }} / 
@@ -79,7 +79,12 @@
     <div class="col-md-12 my-3">
         <form action='{% url "add_comment_url" slug=post.slug %}' method="post">
             {% csrf_token %}
-            {{ form_com.as_p }}
+            <div class="fieldWrapper mb-2">
+              {{ form_com.title }}
+            </div>
+            <div class="fieldWrapper">
+              {{ form_com.description }}
+            </div>
             <input type="submit" value="Send">
         </form>
     </div>
