--- a/Project_mini/myBlog/post/templates/forms/add_tag.html
+++ b/Project_mini/myBlog/post/templates/forms/add_tag.html
@@ -9,7 +9,7 @@
 
 <div class="container my-5 text-center">
     <div class="col-md-12 my-3">
-        <form action='{% url "add_tag_url" %}?next={{request.GET.next}}' method="post">
+        <form action='{% url "add_tag_url" %}' method="post">
             {% csrf_token %}
             {{form_tag.as_p}}
             <!-- <input type="hidden" value="next"> -->
