--- a/Project_mini/myBlog/post/templates/forms/change_password.html
+++ b/Project_mini/myBlog/post/templates/forms/change_password.html
@@ -7,11 +7,22 @@
 {% block content %}
 
 
-<div class="container my-5">
-    <div class="col-md-12 my-3">
-        <form action='{% url "change_password_url" %}?next={{request.GET.next}}' method="post">
+<div class="container my-3 text-center">
+    <div class="col-md-12 my-2">
+        <form action='{% url "change_password_url" %}' method="post">
             {% csrf_token %}
-            {{form.as_p}}
+            <label for="title" class="col-form-label">Old Password</label>
+            <div class="fieldWrapper mb-3">
+                {{form.old_password}}
+            </div>
+            <label for="title" class="col-form-label">New Password</label>
+            <div class="fieldWrapper mb-3">
+                {{form.new_password}}
+            </div>
+            <label for="title" class="col-form-label">Confirm New Password</label>
+            <div class="fieldWrapper mb-4">
+                {{form.confirm_new_password}}
+            </div>
             <!-- <input type="hidden" value="next"> -->
             <input type="submit" value="change password">
         </form>
