--- a/Project_mini/myBlog/post/templates/forms/delete_tag.html
+++ b/Project_mini/myBlog/post/templates/forms/delete_tag.html
@@ -7,14 +7,15 @@
 {% block content %}
 
 
-<div class="container my-5 text-center">
-    <div class="col-md-12 my-3">
-        <form action="{% url 'delete_tag_url' id=tag.id %}?next={{request.GET.next}}" method="post">
+<div class="container my-4 pb-5 text-center">
+    <div class="col-md-12 my-5">
+        <form action="{% url 'delete_tag_url' id=tag.id %}" method="post">
             {% csrf_token %}
             {{form.as_p}}
             <h4>Are You sure you want to delete this category?</h4>
+            <p></p>
             <p>by clicking on the button the ({{tag.title}}) will be deleted</p>
-            <input class="btn btn-danger" type="submit" value="delete">
+            <input class="btn btn-danger mt-2" type="submit" value="delete">
         </form>
     </div>
 </div>
