--- a/Project_mini/myBlog/post/templates/forms/edit_category.html
+++ b/Project_mini/myBlog/post/templates/forms/edit_category.html
@@ -7,13 +7,16 @@
 {% block content %}
 
 
-<div class="container my-5 text-center">
+<div class="container my-5 pb-4 text-center">
     <div class="col-md-12 my-3">
-        <form action="{% url 'edit_category_url' id=category.id %}?next={{request.GET.next}}" method="post">
+        <form action="{% url 'edit_category_url' id=category.id %}" method="post">
             {% csrf_token %}
-            {{form.as_p}}
-            <p>rename ({{category.title}}) ?</p>
-            <input class="btn btn-danger" type="submit" value="edit">
+            <label for="title" class="col-form-label">Title</label>
+            <div class="fieldWrapper">
+                {{form.title}}
+            </div>
+            <p class="fw-light fst-italic">rename ({{category.title}}) ?</p>
+            <input class="btn btn-danger mt-3" type="submit" value="edit">
         </form>
     </div>
 </div>
