--- a/Project_mini/myBlog/post/templates/forms/register.html
+++ b/Project_mini/myBlog/post/templates/forms/register.html
@@ -9,7 +9,7 @@
 
 <div class="container my-5 text-center">
     <div class="col-md-12 my-3">
-        <form action='{% url "register_url" %}?next={{request.GET.next}}' method="post">
+        <form action='{% url "register_url" %}' method="post">
             {% csrf_token %}
             {{form.as_p}}
             <input type="submit" value="register">
