--- a/Project_mini/myBlog/post/templates/forms/change_password.html
+++ b/Project_mini/myBlog/post/templates/forms/change_password.html
@@ -11,6 +11,9 @@
     <div class="col-md-12 my-2">
         <form action='{% url "change_password_url" %}' method="post">
             {% csrf_token %}
+
+            <strong class="text-lg-start">{{ form.errors }}</strong>
+
             <label for="title" class="col-form-label">Old Password</label>
             <div class="fieldWrapper mb-3">
                 {{form.old_password}}
@@ -18,6 +21,7 @@
             <label for="title" class="col-form-label">New Password</label>
             <div class="fieldWrapper mb-3">
                 {{form.new_password}}
+
             </div>
             <label for="title" class="col-form-label">Confirm New Password</label>
             <div class="fieldWrapper mb-4">
