--- a/Project_mini/myBlog/post/templates/forms/register.html
+++ b/Project_mini/myBlog/post/templates/forms/register.html
@@ -11,7 +11,18 @@
     <div class="col-md-12 my-3">
         <form action='{% url "register_url" %}' method="post">
             {% csrf_token %}
-            {{form.as_p}}
+            
+            {% for field in form %}
+            <label for="title" class="col-form-label">{{ field.label_tag }}</label>
+            <div class="fieldWrapper mb-4">
+                <!-- {{ field.errors }} -->
+                {{ field }}
+                {% if field.help_text %}
+                    <p class="help">{{ field.help_text|safe }}</p>
+                {% endif %}
+            </div>
+            {% endfor %}
+
             <input type="submit" value="register">
         </form>
     </div>
