--- a/Project_mini/myBlog/post/templates/post/category_list.html
+++ b/Project_mini/myBlog/post/templates/post/category_list.html
@@ -29,7 +29,8 @@
                 <div class="col-lg-3 col-md-12 mb-4">
                 <div class="card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img src="https://mdbootstrap.com/img/new/standard/nature/09{{ category.id }}.jpg" class="img-fluid" style="border-radius: 50%;" />
+                    <img src="https://mdbootstrap.com/img/new/standard/nature/00{{ category.id }}.jpg" class="img-fluid" style="border-radius: 50%;" />
+                    {{ category.id }}
                     <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                     </a>
