--- a/Project_mini/myBlog/post/templates/post/tag_list.html
+++ b/Project_mini/myBlog/post/templates/post/tag_list.html
@@ -29,6 +29,7 @@
               <div class="card">
                 <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                   <img src="https://mdbootstrap.com/img/new/standard/nature/00{{ tag.id }}.jpg" class="img-fluid" />
+                  {{ tag.id }}
                   <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                   </a>
