--- a/Project_mini/myBlog/post/templates/forms/delete_post.html
+++ b/Project_mini/myBlog/post/templates/forms/delete_post.html
@@ -7,12 +7,13 @@
 {% block content %}
 
 
-<div class="container my-5 text-center">
-    <div class="col-md-12 my-3">
+<div class="container my-4 pb-5 text-center">
+    <div class="col-md-12 my-5">
         <form action="{% url 'delete_post_url' slug=post.slug %}" method="post">
             {% csrf_token %}
             {{form.as_p}}
             <h4>Are You sure you want to delete this Post?</h4>
+            <p></p>
             <p>by clicking on the button the ({{post.title}}) will be deleted</p>
             <input class="btn btn-danger" type="submit" value="delete">
         </form>
