--- a/Project_mini/myBlog/post/templates/forms/edit_post.html
+++ b/Project_mini/myBlog/post/templates/forms/edit_post.html
@@ -9,7 +9,7 @@
 
 <div class="container my-5 text-center">
     <div class="col-md-12 my-3">
-        <form action="{% url 'edit_post_url' slug=post.slug %}" method="post">
+        <form enctype="multipart/form-data" action="{% url 'edit_post_url' slug=post.slug %}" method="post">
             {% csrf_token %}
             {% for field in form %}
                 <label for="title" class="col-form-label">{{ field.label_tag }}</label>
